--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Long+Cang|Mansalva&display=swap" rel="stylesheet">
     <title>Blog Web</title>
 </head>
@@ -12,7 +12,7 @@
     <div class="grid_container">
         <aside>
             <ul class="menu" id="menu">
-                <li> <img src="../images/menu.jpeg" class="imagenes menu"></li>
+                <li> <img src="images/menu.jpeg" class="imagenes menu"></li>
                 <li id="inicio">Inicio</li>
                 <li id="dia1">Dia 1</li>
                 <li id="dia2">Dia 2</li>
@@ -24,45 +24,61 @@
         <div class="articles">
             <article class="article1">
                 <h1 class="titulos">Blog "Una visión perversa"</h1>
-                <img src="../images/titulo.jpeg" class="imagenes articulo">
+                <img src="images/titulo.jpeg" class="imagenes articulo">
             </article>
             <article class="article2">
                 <h2 class="titulos">Dia 1</h2>
-                <img src="../images/dia1.jpg" class="imagenes articulo">
+                <img src="images/dia1.jpg" class="imagenes articulo">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam sapiente dignissimos, aut explicabo quis eius, nisi provident facere quasi ullam, aliquam quaerat mollitia aliquid culpa nemo maiores? Asperiores, iusto ea.Facilis tempora doloribus alias itaque aut similique reiciendis enim dolorem vitae eos? Ipsam debitis quis eum eaque dignissimos doloremque quo atque, sunt, ipsa consectetur quasi optio. Cupiditate eveniet voluptas ducimus!
+                    El primer dia fue un poco extraño, ya que al finalizar la clase se colocò el video de un hombre con mascara que amenazaba la universidad, diciendo que la haria explotar.
+                </p>
+                <p>
+                    Lo mas curioso fue el video siguiente, una persona anonima llamada Kurt que pedia nuestra ayuda.
+                    El reto era un poco diferente a lo esperado; era hacer una funcion en postgres para verificar la autenticidad de un dui dado, al cumpplir eso el siguiente dia se daria la siguiente pista.
                 </p>
             </article>
             <article class="article3">
                 <h2 class="titulos">Dia 2</h2>
-                <img src="../images/dia2.jpg" class="imagenes articulo">
+                <img src="images/dia2.jpg" class="imagenes articulo">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam sapiente dignissimos, aut explicabo quis eius, nisi provident facere quasi ullam, aliquam quaerat mollitia aliquid culpa nemo maiores? Asperiores, iusto ea.Facilis tempora doloribus alias itaque aut similique reiciendis enim dolorem vitae eos? Ipsam debitis quis eum eaque dignissimos doloremque quo atque, sunt, ipsa consectetur quasi optio. Cupiditate eveniet voluptas ducimus!
+                    El segundo dia, al terminar la consulta, se nos decia que buscaramos en el polideportivo de la UCA, mas exactamente, por la mesas.
+                </p>
+                <p>
+                    Hallamos la segunda pista, en la que ya no era Kurt, sino una chica llamada Ada Jarvis, que nos pedia hacer una funcion que funcionara al crear dos Triggers.
                 </p>
             </article>
             <article class="article4">
                 <h2 class="titulos">Dia 3</h2>
-                <img src="../images/dia3.jpeg" class="imagenes articulo">
+                <img src="images/dia3.jpeg" class="imagenes articulo">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam sapiente dignissimos, aut explicabo quis eius, nisi provident facere quasi ullam, aliquam quaerat mollitia aliquid culpa nemo maiores? Asperiores, iusto ea.Facilis tempora doloribus alias itaque aut similique reiciendis enim dolorem vitae eos? Ipsam debitis quis eum eaque dignissimos doloremque quo atque, sunt, ipsa consectetur quasi optio. Cupiditate eveniet voluptas ducimus!
+                    El tercer dia procedimos a buscar de nuevo otra pista, que no pudimos encontrar al tener dificultades en la consulta, que posteriormente hallamos cerca de la rampa en las aulas D.
+                </p>
+                <p>
+                    Ese dia obtuvimos un audio de como Ada y Kurt conocieron a Ale Rav y como habia cambiado con el paso del tiempo.
                 </p>
             </article>
             <article class="article5">
                 <h2 class="titulos">Dia 4</h2>
-                <img src="../images/dia4.jpeg" class="imagenes articulo">
+                <img src="images/dia4.jpeg" class="imagenes articulo">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam sapiente dignissimos, aut explicabo quis eius, nisi provident facere quasi ullam, aliquam quaerat mollitia aliquid culpa nemo maiores? Asperiores, iusto ea.Facilis tempora doloribus alias itaque aut similique reiciendis enim dolorem vitae eos? Ipsam debitis quis eum eaque dignissimos doloremque quo atque, sunt, ipsa consectetur quasi optio. Cupiditate eveniet voluptas ducimus!
+                    El cuarto dia en la clase de bases salimos a investigar y justamente llego un dron con la siguiente y ultima pista para atrapar a Ale Rav.
+                </p>
+                <p>
+                    Erauna funcion que borrara elementos de una subcalse al ser eliminado tambien de la superclase, al final nos dijeron que el desenlace seria el dia siguiente a las 5pm en una magna.
                 </p>
             </article>
             <article class="article6">
                 <h2 class="titulos">Dia 5</h2>
                 <img src="../images/dia5.jpeg" class="imagenes articulo">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam sapiente dignissimos, aut explicabo quis eius, nisi provident facere quasi ullam, aliquam quaerat mollitia aliquid culpa nemo maiores? Asperiores, iusto ea.Facilis tempora doloribus alias itaque aut similique reiciendis enim dolorem vitae eos? Ipsam debitis quis eum eaque dignissimos doloremque quo atque, sunt, ipsa consectetur quasi optio. Cupiditate eveniet voluptas ducimus!
+                    Este dia se nos aparecio Kurt en persona y nos dijo que habia recabado suficiente informacion para poder denunciar a Ale Rav, pero de manera repentina fallecio.
+                </p>
+                <p>
+                    Al caer dejo un QR que al escanearlo tenia al culpable de todo, era el mismisimo profesor Varela!
                 </p>
             </article>
         </div>
     </div>
-    <script src="../js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
