--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </article>
             <article class="article6">
                 <h2 class="titulos">Dia 5</h2>
-                <img src="../images/dia5.jpeg" class="imagenes articulo">
+                <img src="images/dia5.jpeg" class="imagenes articulo">
                 <p>
                     Este dia se nos aparecio Kurt en persona y nos dijo que habia recabado suficiente informacion para poder denunciar a Ale Rav, pero de manera repentina fallecio.
                 </p>
